--- a/static/style.css
+++ b/static/style.css
@@ -7,64 +7,39 @@
  * color: #6C8899 - grey (info-bez)
  */
 
-body {
-    font-family: "Verdana", monospace;
+html, body {
     color: #393939;
-}
-
-ul {
-    list-style-type: none;
-}
-
-a {
-    color: #3C388D;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #9fc53a;
-}
-
-h1 {
-    font-size: 2em;
-    font-weight: 600;
-}
-
-.sidebar {
+    line-height: 1.5;
     height: 100%;
-    width: 240px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #f4f4f4;
-    overflow-x: hidden;
-    padding-top: 20px;
+    background: #ECF0F3;
 }
 
-.main {
-    margin-left: 240px; /* Same as the width of the sidebar */
-    padding: 0px 10px;
+nav.navbar {
+  border-top: 4px solid #3C388D;
+  margin-bottom: 1rem;
 }
 
-.button,
-button,
-input[type='button'],
-input[type='reset'],
-input[type='submit'] {
-  background-color: #3C388D;
-  border: 0.1rem solid #3C388D;
+.card {
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.18);
+  margin-bottom: 2rem;
 }
 
-.button:focus, .button:hover,
-button:focus,
-button:hover,
-input[type='button']:focus,
-input[type='button']:hover,
-input[type='reset']:focus,
-input[type='reset']:hover,
-input[type='submit']:focus,
-input[type='submit']:hover {
-  background-color: #9FC53A;
-  border-color: #9FC53A;
+.menu-list a {
+  color: #0F1D38;
 }
+
+.menu-list a:hover {
+  background-color: transparent;
+  color: #3C388D;
+}
+.menu-list a.is-active {
+  background-color: transparent;
+  color: #3C388D;
+}
+
+.hero.welcome.is-info {
+  background: #652580;
+  background: -webkit-linear-gradient(to right, #3C388D, #652580);
+  background: linear-gradient(to right, #3C388D, #652580);
+}
+
