--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
             Администрирование
           </p>
           <ul class="menu-list">
-            <li><a>Отслеживаемые устройства</a></li>
+            <li><a href="/devices">Отслеживаемые устройства</a></li>
           </ul>
         </aside>
       </div>
