--- a/templates/audit.html
+++ b/templates/audit.html
@@ -8,6 +8,12 @@
           Журнал транзакций
         </p>
       </header>
+<div class="card-table">
+<div class="content">
+<div class="field is-grouped">
+    <input class="input is-normal" type="text" placeholder="Поиск">
+    <button class="button is-link">Поиск</button>
+</div>
   <table class="table is-fullwidth is-striped">
     <thead>
       <tr>
@@ -26,6 +32,8 @@
     </tbody>
     {% endfor %}
   </table>
+</div>
+</div>
 </div>
 </section>
 {% endblock content %}
