--- a/templates/base.html
+++ b/templates/base.html
@@ -43,17 +43,18 @@
             <li><a href="/">Главная панель</a></li>
           </ul>
           <p class="menu-label">
-            Статистика и журналы
+            Управление и мониторинг
           </p>
           <ul class="menu-list">
             <li><a href="/audit">Журнал транзакций</a></li>
-            <li><a>Состояние системы</a></li>
+            <li><a href="/devices">Отслеживаемые устройства</a></li>
           </ul>
           <p class="menu-label">
-            Администрирование
+            Система 
           </p>
           <ul class="menu-list">
-            <li><a href="/devices">Отслеживаемые устройства</a></li>
+            <li><a href="/network">Сетевые настройки</a></li>
+            <li><a>Состояние системы</a></li>
           </ul>
         </aside>
       </div>
